# mjoelnir

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
Mjoelnir/: CMakeLists.txt
Mjoelnir/examples/: mjoelnir_app.c
Mjoelnir/examples/hello_triangle/: hello_triangle.c
Mjoelnir/include/: mjoelnir.h  mjoelnir.hpp
Mjoelnir/src/: mjoelnir.c  mjoelnir.cpp
Sandbox/: CMakeLists.txt
Sandbox/src/: main.c  main.cpp
src/: main.c
tutorial/drawing_a_triangle/shaders/: compile.sh
